# opendatahub-tests

./: .coderabbit.yaml  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .release-it.json  CONTRIBUTING.md  Dockerfile  Makefile  README.md  VSCODE_CONFIG.md  conftest.py  pyproject.toml  pytest.ini  renovate.json  schemathesis.toml  tox.ini
.github/: CODEOWNERS  README.md  labeler.yml
.github/workflows/: add-remove-labels.yml  add-welcome-comment-set-assignee.yml  add-welcome-comment.yml  build-push-container-on-merge.yml  cherry-pick-comment.yml  delete-image-tag.yml  on-review-add-label.yml  push-container-on-comment.yml  size-labeler.yml  tox-tests.yml  verify_build_container.yml  workflow-review.yml
.github/workflows/scripts/: constants.py  pr_labeler.py  pr_workflow.py
docs/: CONTRIBUTING.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  GITHUB_WORKFLOWS.md  STYLE_GUIDE.md  UPGRADE.md
tests/: conftest.py  global_config.py  utils.py
tests/model_explainability/: conftest.py  constants.py  utils.py
tests/model_explainability/guardrails/: conftest.py  test_guardrails.py  test_llama_stack_fms_provider.py  utils.py
tests/model_explainability/lm_eval/: conftest.py  test_lm_eval.py  utils.py
tests/model_explainability/lm_eval/data/: new_task_list.csv
tests/model_explainability/trustyai_operator/: conftest.py  test_trustyai_operator.py  utils.py
tests/model_explainability/trustyai_service/: conftest.py  constants.py  test_trustyai_service.py  trustyai_service_utils.py  utils.py
tests/model_explainability/trustyai_service/drift/: conftest.py  test_drift.py
tests/model_explainability/trustyai_service/fairness/: conftest.py  test_fairness.py
tests/model_explainability/trustyai_service/service/: conftest.py  test_trustyai_service.py  utils.py
tests/model_explainability/trustyai_service/upgrade/: test_trustyai_service_upgrade.py
tests/model_registry/: conftest.py  constants.py  exceptions.py  test_model_registry_creation.py  test_model_registry_creation_negative.py  test_rest_api.py  test_rest_api_stateful.py  utils.py
tests/model_registry/image_validation/: conftest.py  test_verify_rhoai_images.py
tests/model_registry/negative_tests/: conftest.py  constants.py  test_db_migration.py  test_model_registry_creation_negative.py
tests/model_registry/python_client/: conftest.py  test_model_registry_creation.py  test_model_registry_creation_oauth.py
tests/model_registry/rbac/: conftest.py  group_utils.py  test_mr_rbac.py  test_mr_rbac_sa.py  utils.py
tests/model_registry/rest_api/: conftest.py  constants.py  test_model_registry_rest_api.py  test_model_registry_secure_db.py  utils.py
tests/model_registry/rest_api/mariadb/: conftest.py  test_mr_mariadb.py  utils.py
tests/model_registry/scc/: test_model_registry_scc.py  utils.py
tests/model_registry/upgrade/: test_model_registry_upgrade.py
tests/model_serving/: conftest.py
tests/model_serving/model_runtime/mlserver/: conftest.py  constant.py  mlserver_grpc_serving_template.yaml  mlserver_rest_serving_template.yaml  utils.py
tests/model_serving/model_runtime/triton/: constant.py
tests/model_serving/model_runtime/vllm/: conftest.py  constant.py  utils.py
tests/model_serving/model_server/: conftest.py  utils.py
tests/model_serving/model_server/authentication/: conftest.py  test_kserve_token_authentication.py  test_kserve_token_authentication_raw.py  test_kserve_token_authentication_serverless.py  test_model_mesh_authentication.py  test_non_admin_users.py  (+1 more)
tests/rag/: conftest.py  test_rag.py
tests/trustyai/: conftest.py  constants.py  utils.py
tests/trustyai/drift/: conftest.py  test_drift.py  utils.py
tests/trustyai/lm_eval/: conftest.py  test_lm_eval.py  utils.py
tests/workbenches/: conftest.py  utils.py
tests/workbenches/notebook-controller/: test_spawning.py
utilities/: certificates_utils.py  constants.py  data_science_cluster_utils.py  database.py  exceptions.py  general.py  inference_utils.py  infra.py  jira.py  kueue_utils.py  logger.py  mariadb_utils.py  minio.py  monitoring.py  must_gather_collector.py  operator_utils.py  pytest_utils.py  rag_utils.py  serving_runtime.py  user_utils.py
utilities/manifests/: caikit_standalone.py  caikit_tgis.py  models_inqueries.py  onnx.py  openvino.py  pytorch.py  runtime_query_config.py  tensorflow.py  tgis_grpc.py  vllm.py
utilities/manifests/common/: grpc_predict_v2.proto
utilities/manifests/openvino/: dog-input-tensor.json  vehicle-detection-inputs.txt
utilities/manifests/tensorflow/: vehicle-detection-inputs.txt
utilities/plugins/: constant.py  openai_plugin.py  tgis_grpc_plugin.py
utilities/plugins/tgis_grpc/: generation_pb2.py  generation_pb2_grpc.py
(+150 files in other folders)
